--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
     "description": "",
     "main": "index.js",
     "scripts": {
-        "dev": "ts-node-dev -r tsconfig-paths/register --transpile-only --respawn --ignore-watch node_modules src/index.ts",
+        "dev": "ts-node-dev -r tsconfig-paths/register --transpile-only --ignore-watch node_modules src/index.ts",
         "build": "tsc",
         "test": "jest"
     },
@@ -14,6 +14,7 @@
     "devDependencies": {
         "@types/jest": "^29.5.3",
         "@types/node": "^20.4.9",
+        "@types/terminal-kit": "^2.5.7",
         "jest": "^29.6.2",
         "ts-jest": "^29.1.1",
         "ts-node-dev": "^2.0.0",
@@ -21,6 +22,7 @@
         "typescript": "^5.1.6"
     },
     "dependencies": {
-        "projeto": "file:"
+        "projeto": "file:",
+        "terminal-kit": "^3.1.2"
     }
 }
