--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "projeto",
+    "name": "backend",
     "version": "1.0.0",
     "description": "",
     "main": "index.js",
@@ -13,9 +13,10 @@
     "license": "ISC",
     "devDependencies": {
         "@types/bcrypt": "^5.0.2",
+        "@types/express": "^5.0.1",
         "@types/jest": "^29.5.3",
+        "@types/jsonwebtoken": "^9.0.9",
         "@types/node": "^20.4.9",
-        "@types/terminal-kit": "^2.5.7",
         "jest": "^29.6.2",
         "ts-jest": "^29.1.1",
         "ts-node-dev": "^2.0.0",
@@ -23,8 +24,11 @@
         "typescript": "^5.1.6"
     },
     "dependencies": {
+        "backend": "file:",
         "bcrypt": "^5.1.1",
-        "projeto": "file:",
-        "terminal-kit": "^3.1.2"
+        "dotenv": "^16.5.0",
+        "express": "^5.1.0",
+        "jsonwebtoken": "^9.0.2",
+        "projeto": "file:"
     }
 }
